ETSL-462 Product tile fixes for height spacing of tile and price should stick to bottom

--- a/ui.frontend/src/main/webpack/etisalat/styles/container_main.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/container_main.scss
@@ -28981,16 +28981,6 @@ padding: 1rem 1rem 4rem;
 	max-height: 274px
 }
 
-.product-grid-text-section.plans .product-tile-section.bg-cards.product-plan-card .plan-card.tile-table .tile-card .tile-card__front .body-standard>.cover {
-	height: 280px;
-	div.cmp-image {
-		height: 100%;
-		.cmp-image__image {
-			height: 100%;
-		}
-	}
-}
-
 @media (max-width:991px) {
 	.product-grid-text-section.plans .product-tile-section.bg-cards.product-plan-card .plan-card.tile-table .tile-card .tile-card__front {
 		min-height: 548px!important;
